<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:background="@color/colorPrimaryDark"
    tools:context="com.nouspartageons.django.nouspartageonsapp.ParametreCompteActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/compte_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/user" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/compte_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:id="@+id/constraintLayout">

        <Button
            android:id="@+id/change_image_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/compte_name"
            android:layout_alignStart="@+id/compte_name"
            android:layout_below="@+id/compte_name"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"
            android:padding="10dp"
            android:text="@string/changer_la_photo"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compte_status" />

        <Button
            android:id="@+id/change_status_btn"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/change_image_btn"
            android:layout_alignRight="@+id/change_image_btn"
            android:layout_below="@+id/change_image_btn"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"
            android:padding="10dp"
            android:text="@string/change_status"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_image_btn" />

        <TextView
            android:id="@+id/compte_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/bonjour_j_utilise_nous_partageons_app"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compte_name" />

        <TextView
            android:id="@+id/compte_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/nom_complet"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
